Bug fix. -Incorrect placeholder value for imagename -Post image alignment -Comment creation redirection

--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -107,6 +107,11 @@ header .action {
 	white-space: pre-line;
 }
 
+article img {
+	display: block;
+	margin: auto;
+}
+
 .content:last-child {
 	margin-bottom: 0;
 }
